// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test FilterCRUD component Add a new filter -> edit it -> duplicate it -> delete it 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
            >
              <mask
                fill="#fff"
                id="ng-filter_svg__a"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0V7H19a.5.5 0 000-1h-2.5V5zm-12 7a.5.5 0 01.5-.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5zm0 5.5A.5.5 0 015 17h7v-1a.5.5 0 011 0v1h6a.5.5 0 010 1h-6v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5z"
                  fill-rule="evenodd"
                />
              </mask>
              <path
                d="M15.5 6v1a1 1 0 001-1h-1zm0 1h1a1 1 0 00-1-1v1zm1 0V6a1 1 0 00-1 1h1zm0-1h-1a1 1 0 001 1V6zM8 11.5v1a1 1 0 001-1H8zm1 0H8a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4 4.5v1a1 1 0 001-1h-1zm1 0h-1a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4-12.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0016 3.5v2zm.5-.5a.5.5 0 01-.5.5v-2A1.5 1.5 0 0014.5 5h2zm0 1V5h-2v1h2zM5 7h10.5V5H5v2zm.5-.5A.5.5 0 015 7V5a1.5 1.5 0 00-1.5 1.5h2zM5 6a.5.5 0 01.5.5h-2A1.5 1.5 0 005 8V6zm10.5 0H5v2h10.5V6zm1 2V7h-2v1h2zm-.5-.5a.5.5 0 01.5.5h-2A1.5 1.5 0 0016 9.5v-2zm-.5.5a.5.5 0 01.5-.5v2A1.5 1.5 0 0017.5 8h-2zm0-1v1h2V7h-2zM19 6h-2.5v2H19V6zm-.5.5A.5.5 0 0119 6v2a1.5 1.5 0 001.5-1.5h-2zm.5.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0019 5v2zm-2.5 0H19V5h-2.5v2zm-1-2v1h2V5h-2zM5 10.5A1.5 1.5 0 003.5 12h2a.5.5 0 01-.5.5v-2zm3 0H5v2h3v-2zm-1 0v1h2v-1H7zM8.5 9A1.5 1.5 0 007 10.5h2a.5.5 0 01-.5.5V9zm1.5 1.5A1.5 1.5 0 008.5 9v2a.5.5 0 01-.5-.5h2zm0 1v-1H8v1h2zm9-1H9v2h10v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zM19 13.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-10 0h10v-2H9v2zm1 0v-1H8v1h2zM8.5 15a1.5 1.5 0 001.5-1.5H8a.5.5 0 01.5-.5v2zM7 13.5A1.5 1.5 0 008.5 15v-2a.5.5 0 01.5.5H7zm0-1v1h2v-1H7zm-2 1h3v-2H5v2zM3.5 12A1.5 1.5 0 005 13.5v-2a.5.5 0 01.5.5h-2zM5 16a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm7 0H5v2h7v-2zm1 1v-1h-2v1h2zm0-1a.5.5 0 01-.5.5v-2A1.5 1.5 0 0011 16h2zm-.5.5a.5.5 0 01-.5-.5h2a1.5 1.5 0 00-1.5-1.5v2zM12 16v1h2v-1h-2zm7 0h-6v2h6v-2zm1.5 1.5A1.5 1.5 0 0019 16v2a.5.5 0 01-.5-.5h2zM19 19a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-6 0h6v-2h-6v2zm-1-1v1h2v-1h-2zm0 1a.5.5 0 01.5-.5v2A1.5 1.5 0 0014 19h-2zm.5-.5a.5.5 0 01.5.5h-2a1.5 1.5 0 001.5 1.5v-2zm.5.5v-1h-2v1h2zm-8 0h7v-2H5v2zm-1.5-1.5A1.5 1.5 0 005 19v-2a.5.5 0 01.5.5h-2z"
                fill="#383946"
                mask="url(#ng-filter_svg__a)"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main StyledProps--color StyledProps--color-white"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading StyledProps--font Button--button StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          New Filter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 55vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-disabled bp3-loading bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    disabled=""
                    id="filtermenu-DockerOnly"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="bp3-spinner bp3-button-spinner"
                    >
                      <div
                        class="bp3-spinner-animation"
                      >
                        <svg
                          height="20"
                          stroke-width="16.00"
                          viewBox="-3.00 -3.00 106.00 106.00"
                          width="20"
                        >
                          <path
                            class="bp3-spinner-track"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          />
                          <path
                            class="bp3-spinner-head"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                            pathLength="280"
                            stroke-dasharray="280 280"
                            stroke-dashoffset="210"
                          />
                        </svg>
                      </div>
                    </div>
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="20"
                        width="20"
                      >
                        <defs>
                          <path
                            d="M0 0h24v24H0z"
                            id="Options_svg__a"
                          />
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <mask
                            fill="#fff"
                            id="Options_svg__b"
                          >
                            <use
                              xlink:href="#Options_svg__a"
                            />
                          </mask>
                          <path
                            d="M17.5 13.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-11 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5.5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z"
                            mask="url(#Options_svg__b)"
                            stroke="#25A6F7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            transform="rotate(90 12 12)"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="This filter is visible to only me."
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="20"
                        width="20"
                      >
                        <defs>
                          <path
                            d="M0 0h24v24H0z"
                            id="Options_svg__a"
                          />
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <mask
                            fill="#fff"
                            id="Options_svg__b"
                          >
                            <use
                              xlink:href="#Options_svg__a"
                            />
                          </mask>
                          <path
                            d="M17.5 13.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-11 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5.5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z"
                            mask="url(#Options_svg__b)"
                            stroke="#25A6F7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            transform="rotate(90 12 12)"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-left-large StyledProps--padding-right-large"
          >
            <div
              class="bp3-form-group filterName"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <label
                  class="Label--main"
                  style="font-size: small; color: white;"
                >
                  Filter Name
                </label>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="Type filter name"
                    type="text"
                    value="filterWithUserOnlyVisibility"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <label
                class="Label--main"
                style="font-size: small; color: white;"
              >
                Who can view and edit the filter?
              </label>
              <div
                class="bp3-form-group bp3-inline radioBtns"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio Radio--radio"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="OnlyCreator"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Only me
                    </label>
                    <label
                      class="bp3-control bp3-radio Radio--radio"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="EveryOne"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Everyone
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <button
                class="bp3-button bp3-disabled bp3-loading StyledProps--font Button--button StyledProps--main saveFilterBtn"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <div
                  class="bp3-spinner bp3-button-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main cancelBtn StyledProps--intent-primary"
                type="reset"
              >
                <span
                  class="bp3-button-text"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Enable edit mode 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
            >
              <mask
                fill="#fff"
                id="ng-filter_svg__a"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0V7H19a.5.5 0 000-1h-2.5V5zm-12 7a.5.5 0 01.5-.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5zm0 5.5A.5.5 0 015 17h7v-1a.5.5 0 011 0v1h6a.5.5 0 010 1h-6v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5z"
                  fill-rule="evenodd"
                />
              </mask>
              <path
                d="M15.5 6v1a1 1 0 001-1h-1zm0 1h1a1 1 0 00-1-1v1zm1 0V6a1 1 0 00-1 1h1zm0-1h-1a1 1 0 001 1V6zM8 11.5v1a1 1 0 001-1H8zm1 0H8a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4 4.5v1a1 1 0 001-1h-1zm1 0h-1a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4-12.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0016 3.5v2zm.5-.5a.5.5 0 01-.5.5v-2A1.5 1.5 0 0014.5 5h2zm0 1V5h-2v1h2zM5 7h10.5V5H5v2zm.5-.5A.5.5 0 015 7V5a1.5 1.5 0 00-1.5 1.5h2zM5 6a.5.5 0 01.5.5h-2A1.5 1.5 0 005 8V6zm10.5 0H5v2h10.5V6zm1 2V7h-2v1h2zm-.5-.5a.5.5 0 01.5.5h-2A1.5 1.5 0 0016 9.5v-2zm-.5.5a.5.5 0 01.5-.5v2A1.5 1.5 0 0017.5 8h-2zm0-1v1h2V7h-2zM19 6h-2.5v2H19V6zm-.5.5A.5.5 0 0119 6v2a1.5 1.5 0 001.5-1.5h-2zm.5.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0019 5v2zm-2.5 0H19V5h-2.5v2zm-1-2v1h2V5h-2zM5 10.5A1.5 1.5 0 003.5 12h2a.5.5 0 01-.5.5v-2zm3 0H5v2h3v-2zm-1 0v1h2v-1H7zM8.5 9A1.5 1.5 0 007 10.5h2a.5.5 0 01-.5.5V9zm1.5 1.5A1.5 1.5 0 008.5 9v2a.5.5 0 01-.5-.5h2zm0 1v-1H8v1h2zm9-1H9v2h10v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zM19 13.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-10 0h10v-2H9v2zm1 0v-1H8v1h2zM8.5 15a1.5 1.5 0 001.5-1.5H8a.5.5 0 01.5-.5v2zM7 13.5A1.5 1.5 0 008.5 15v-2a.5.5 0 01.5.5H7zm0-1v1h2v-1H7zm-2 1h3v-2H5v2zM3.5 12A1.5 1.5 0 005 13.5v-2a.5.5 0 01.5.5h-2zM5 16a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm7 0H5v2h7v-2zm1 1v-1h-2v1h2zm0-1a.5.5 0 01-.5.5v-2A1.5 1.5 0 0011 16h2zm-.5.5a.5.5 0 01-.5-.5h2a1.5 1.5 0 00-1.5-1.5v2zM12 16v1h2v-1h-2zm7 0h-6v2h6v-2zm1.5 1.5A1.5 1.5 0 0019 16v2a.5.5 0 01-.5-.5h2zM19 19a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-6 0h6v-2h-6v2zm-1-1v1h2v-1h-2zm0 1a.5.5 0 01.5-.5v2A1.5 1.5 0 0014 19h-2zm.5-.5a.5.5 0 01.5.5h-2a1.5 1.5 0 001.5 1.5v-2zm.5.5v-1h-2v1h2zm-8 0h7v-2H5v2zm-1.5-1.5A1.5 1.5 0 005 19v-2a.5.5 0 01.5.5h-2z"
                fill="#383946"
                mask="url(#ng-filter_svg__a)"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main StyledProps--color StyledProps--color-white"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading StyledProps--font Button--button StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          New Filter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 55vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="20"
                        width="20"
                      >
                        <defs>
                          <path
                            d="M0 0h24v24H0z"
                            id="Options_svg__a"
                          />
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <mask
                            fill="#fff"
                            id="Options_svg__b"
                          >
                            <use
                              xlink:href="#Options_svg__a"
                            />
                          </mask>
                          <path
                            d="M17.5 13.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-11 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5.5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z"
                            mask="url(#Options_svg__b)"
                            stroke="#25A6F7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            transform="rotate(90 12 12)"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="This filter is visible to only me."
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="20"
                        width="20"
                      >
                        <defs>
                          <path
                            d="M0 0h24v24H0z"
                            id="Options_svg__a"
                          />
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <mask
                            fill="#fff"
                            id="Options_svg__b"
                          >
                            <use
                              xlink:href="#Options_svg__a"
                            />
                          </mask>
                          <path
                            d="M17.5 13.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-11 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5.5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z"
                            mask="url(#Options_svg__b)"
                            stroke="#25A6F7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            transform="rotate(90 12 12)"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-xlarge StyledProps--padding-left-large StyledProps--padding-right-large"
          >
            <div
              class="bp3-form-group filterName"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <label
                  class="Label--main"
                  style="font-size: small; color: white;"
                >
                  Filter Name
                </label>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="Type filter name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <label
                class="Label--main"
                style="font-size: small; color: white;"
              >
                Who can view and edit the filter?
              </label>
              <div
                class="bp3-form-group bp3-inline radioBtns"
                style="display: flex; flex-direction: column;"
              >
                <div
                  class="bp3-form-content"
                >
                  <div>
                    <label
                      class="bp3-control bp3-radio Radio--radio"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="OnlyCreator"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Only me
                    </label>
                    <label
                      class="bp3-control bp3-radio Radio--radio"
                    >
                      <input
                        name="filterVisibility"
                        type="radio"
                        value="EveryOne"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      Everyone
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
            >
              <button
                class="bp3-button StyledProps--font Button--button StyledProps--main saveFilterBtn"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
              <button
                class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main cancelBtn StyledProps--intent-primary"
                type="reset"
              >
                <span
                  class="bp3-button-text"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test FilterCRUD component Initial render should match snapshot 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-medium StyledProps--padding-right-small"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main layout"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
          >
            <svg
              height="25"
              viewBox="0 0 24 24"
              width="25"
            >
              <mask
                fill="#fff"
                id="ng-filter_svg__a"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.5 5a.5.5 0 00-1 0v1H5a.5.5 0 000 1h10.5v1a.5.5 0 001 0V7H19a.5.5 0 000-1h-2.5V5zm-12 7a.5.5 0 01.5-.5h3v-1a.5.5 0 011 0v1h10a.5.5 0 010 1H9v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5zm0 5.5A.5.5 0 015 17h7v-1a.5.5 0 011 0v1h6a.5.5 0 010 1h-6v1a.5.5 0 01-1 0v-1H5a.5.5 0 01-.5-.5z"
                  fill-rule="evenodd"
                />
              </mask>
              <path
                d="M15.5 6v1a1 1 0 001-1h-1zm0 1h1a1 1 0 00-1-1v1zm1 0V6a1 1 0 00-1 1h1zm0-1h-1a1 1 0 001 1V6zM8 11.5v1a1 1 0 001-1H8zm1 0H8a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4 4.5v1a1 1 0 001-1h-1zm1 0h-1a1 1 0 001 1v-1zm0 1v-1a1 1 0 00-1 1h1zm-1 0h1a1 1 0 00-1-1v1zm4-12.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0016 3.5v2zm.5-.5a.5.5 0 01-.5.5v-2A1.5 1.5 0 0014.5 5h2zm0 1V5h-2v1h2zM5 7h10.5V5H5v2zm.5-.5A.5.5 0 015 7V5a1.5 1.5 0 00-1.5 1.5h2zM5 6a.5.5 0 01.5.5h-2A1.5 1.5 0 005 8V6zm10.5 0H5v2h10.5V6zm1 2V7h-2v1h2zm-.5-.5a.5.5 0 01.5.5h-2A1.5 1.5 0 0016 9.5v-2zm-.5.5a.5.5 0 01.5-.5v2A1.5 1.5 0 0017.5 8h-2zm0-1v1h2V7h-2zM19 6h-2.5v2H19V6zm-.5.5A.5.5 0 0119 6v2a1.5 1.5 0 001.5-1.5h-2zm.5.5a.5.5 0 01-.5-.5h2A1.5 1.5 0 0019 5v2zm-2.5 0H19V5h-2.5v2zm-1-2v1h2V5h-2zM5 10.5A1.5 1.5 0 003.5 12h2a.5.5 0 01-.5.5v-2zm3 0H5v2h3v-2zm-1 0v1h2v-1H7zM8.5 9A1.5 1.5 0 007 10.5h2a.5.5 0 01-.5.5V9zm1.5 1.5A1.5 1.5 0 008.5 9v2a.5.5 0 01-.5-.5h2zm0 1v-1H8v1h2zm9-1H9v2h10v-2zm1.5 1.5a1.5 1.5 0 00-1.5-1.5v2a.5.5 0 01-.5-.5h2zM19 13.5a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-10 0h10v-2H9v2zm1 0v-1H8v1h2zM8.5 15a1.5 1.5 0 001.5-1.5H8a.5.5 0 01.5-.5v2zM7 13.5A1.5 1.5 0 008.5 15v-2a.5.5 0 01.5.5H7zm0-1v1h2v-1H7zm-2 1h3v-2H5v2zM3.5 12A1.5 1.5 0 005 13.5v-2a.5.5 0 01.5.5h-2zM5 16a1.5 1.5 0 00-1.5 1.5h2a.5.5 0 01-.5.5v-2zm7 0H5v2h7v-2zm1 1v-1h-2v1h2zm0-1a.5.5 0 01-.5.5v-2A1.5 1.5 0 0011 16h2zm-.5.5a.5.5 0 01-.5-.5h2a1.5 1.5 0 00-1.5-1.5v2zM12 16v1h2v-1h-2zm7 0h-6v2h6v-2zm1.5 1.5A1.5 1.5 0 0019 16v2a.5.5 0 01-.5-.5h2zM19 19a1.5 1.5 0 001.5-1.5h-2a.5.5 0 01.5-.5v2zm-6 0h6v-2h-6v2zm-1-1v1h2v-1h-2zm0 1a.5.5 0 01.5-.5v2A1.5 1.5 0 0014 19h-2zm.5-.5a.5.5 0 01.5.5h-2a1.5 1.5 0 001.5 1.5v-2zm.5.5v-1h-2v1h2zm-8 0h7v-2H5v2zm-1.5-1.5A1.5 1.5 0 005 19v-2a.5.5 0 01.5.5h-2z"
                fill="#383946"
                mask="url(#ng-filter_svg__a)"
              />
            </svg>
          </span>
          <span
            class="title"
          >
            Filter
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main StyledProps--color StyledProps--color-white"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cross StyledProps--main"
            icon="cross"
          >
            <svg
              data-icon="cross"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cross
              </desc>
              <path
                d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-xlarge"
    >
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main addNewFilterBtn isActive StyledProps--intent-primary StyledProps--padding-left-large StyledProps--border StyledProps--border-false"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          New Filter
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <ol
            class="filters"
            style="max-height: 85vh;"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title=""
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="noElement"
                />
                <div
                  class="filterLabel"
                  title="DockerOnly"
                >
                  DockerOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    id="filtermenu-DockerOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="20"
                        width="20"
                      >
                        <defs>
                          <path
                            d="M0 0h24v24H0z"
                            id="Options_svg__a"
                          />
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <mask
                            fill="#fff"
                            id="Options_svg__b"
                          >
                            <use
                              xlink:href="#Options_svg__a"
                            />
                          </mask>
                          <path
                            d="M17.5 13.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-11 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5.5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z"
                            mask="url(#Options_svg__b)"
                            stroke="#25A6F7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            transform="rotate(90 12 12)"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main filter StyledProps--flex StyledProps--padding-right-medium"
              title="This filter is visible to only me."
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-medium"
              >
                <span
                  class="bp3-icon bp3-icon-lock StyledProps--main StyledProps--margin-left-xsmall"
                  icon="lock"
                >
                  <svg
                    data-icon="lock"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      lock
                    </desc>
                    <path
                      d="M13.96 7H12V3.95C12 1.77 10.21 0 8 0S4 1.77 4 3.95V7H1.96c-.55 0-.96.35-.96.9v6.91c0 .54.41 1.19.96 1.19h12c.55 0 1.04-.65 1.04-1.19V7.9c0-.55-.49-.9-1.04-.9zM6 7V3.95c0-1.09.9-1.97 2-1.97s2 .88 2 1.97V7H6z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="filterLabel"
                  title="AWSOnly"
                >
                  AWSOnly
                </div>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    id="filtermenu-AWSOnly"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="20"
                        width="20"
                      >
                        <defs>
                          <path
                            d="M0 0h24v24H0z"
                            id="Options_svg__a"
                          />
                        </defs>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                        >
                          <mask
                            fill="#fff"
                            id="Options_svg__b"
                          >
                            <use
                              xlink:href="#Options_svg__a"
                            />
                          </mask>
                          <path
                            d="M17.5 13.5a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-11 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm5.5 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3z"
                            mask="url(#Options_svg__b)"
                            stroke="#25A6F7"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            transform="rotate(90 12 12)"
                          />
                        </g>
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </ol>
        </div>
      </form>
    </div>
  </div>
</div>
`;
